--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://gigtripdb:gigtripV1DB@gig-trip.cpkaay44cdh3.eu-north-1.rds.amazonaws.com:5432/gtripdb
+DATABASE_URL=DBLocation
